Fix HTML5 video dimensions on iOS Safari

--- a/app/directives/lmVideo/lmVideo.sass
+++ b/app/directives/lmVideo/lmVideo.sass
@@ -1,8 +1,4 @@
-lm-video, .lm-video__container, .lm-video__iframe
+lm-video, .lm-video__container, .lm-video__media
     display: block
     height: 100%
     width: 100%
-
-.lm-video__native
-    height: 100%
-    max-width: 100% // For Safari
