--- a/app/views/video/video.sass
+++ b/app/views/video/video.sass
@@ -8,11 +8,7 @@
     z-index: 3
 
 .video__top-half
-    width: 100%
-    max-width: $maxwidth
     background: black
-    margin: 0 auto
-    text-align: center
 
 .video__sources
     color: darken($gray, 10%)
